[package]
name = "native-escrow-2024"
authors = ["Dean Little <@deanmlittle>"]
license = "MIT"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "native_escrow_2024"

[dependencies]
bytemuck = { version = "1.18.0", features = ["derive", "const_zeroed"]}
solana-program = "2.0.10"
spl-token = { version = "6.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "5.0.2", features = ["no-entrypoint"] }

[dev-dependencies]
mollusk-svm = { git = "https://github.com/buffalojoec/mollusk.git" }
solana-sdk = "2.0.10"
spl-associated-token-account = "5.0.1"
